# reactos

./: CMakeLists.txt  toolchain-gcc.cmake  toolchain-msvc.cmake
base/services/rpcss/: rpcss_main.c
boot/: boot_images.cmake
boot/freeldr/freeldr/: CMakeLists.txt  pcat.cmake  uefi.cmake
dll/win32/: CMakeLists.txt
dll/win32/combase/: CMakeLists.txt
dll/win32/dcomp/: CMakeLists.txt  dcomp.spec
dll/win32/ole32/: compobj_private.h  moniker.c  ole32.spec  oleproxy.c
dll/win32/qwave/: CMakeLists.txt
dll/win32/shcore/: CMakeLists.txt  main.c
drivers/bus/: CMakeLists.txt
drivers/bus/acpi_new/: CMakeLists.txt  acpi.rc
drivers/bus/acpi_new/include/uacpi/internal/: helpers.h
drivers/usb/: CMakeLists.txt
drivers/usb/usbd/: usbd.c
drivers/usb/usbser/: CMakeLists.txt  guid.c  ioctl.c  pnp.c  power.c  serial.c  usb.c  usbser.c  usbser.h  usbser.rc  utils.c  wmi.c
hal/: CMakeLists.txt
sdk/cmake/: CMakeMacros.cmake  config.cmake  msvc.cmake
sdk/include/asm/: CMakeLists.txt
sdk/include/psdk/: CMakeLists.txt  combaseapi.h  objbase.h  objidl.idl  shtypes.idl  winbase.h  winerror.h  winreg.h  winuser.h  wtypes.idl
sdk/include/reactos/wine/: CMakeLists.txt  winternl.h
sdk/include/winrt/: roapi.h
sdk/include/xdk/: winnt_old.h
sdk/lib/cpprt/: CMakeLists.txt
sdk/lib/crt/: msvcrtex.cmake
sdk/lib/crt/except/: except.cmake
sdk/lib/crt/math/: math.cmake
sdk/lib/crt/wine/: wine.cmake
sdk/tools/: CMakeLists.txt
sdk/tools/rsym/: CMakeLists.txt  rsym64.c
